--- a/templates/index.html
+++ b/templates/index.html
@@ -58,11 +58,11 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Olá,<br>
+              <h1>Masteradin,<br>
                 <span id="typed-strings">
-                  <span>Minha namorada é muito fofinha!</span>
-                  <span>O nome dela é Aynoan</span>
-                  <span>Ela é a mais linda do mundo!</span>
+                  <span>Alavanca receitas</span>
+                  <span>Monetiza canais</span>
+                  <span>Posiciona seu negócio online</span>
                 </span>
                 <span id="typed"></span>
               </h1>
